--- a/scss/_editor.scss
+++ b/scss/_editor.scss
@@ -3,7 +3,7 @@
     display:flex;
     justify-content: center;
     align-items: flex-start;
-    margin:3rem 5rem;
+    margin:3rem 3rem;
     height: 100%;
     .textbox{
         grid-area: textbox;
